--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo:4.4.6
+        image: mongo:3.6.17-xenial
         ports:
           - containerPort: 27017
         env:
@@ -40,5 +40,4 @@ spec:
     app: mongodb
   ports:
     - protocol: TCP
-      port: 27017
-      targetPort: 27017    
+     
