--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -1,64 +1,65 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pvc
+  name: mongo-pcvol
+  namespace: app3300
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 256Mi
----
+      storage: 1Gi
+  storageClassName: ibmc-block-gold
+  volumeMode: Filesystem
+---  
 apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
 spec:
   selector:
-    app: mongo
+    app: mongodb
   ports:
-    - port: 27017
+    - protocol: TCP
+      port: 27017
       targetPort: 27017
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongodb-deployment
+  labels:
+    app: mongodb
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: mongo
+      app: mongodb
   template:
     metadata:
       labels:
-        app: mongo
+        app: mongodb
     spec:
       containers:
-        - name: mongo
-          image: mongo:3.6.17-xenial
-          ports:
-            - containerPort: 27017
-          volumeMounts:
+      - name: mongodb
+        image: mongo:latest
+        ports:
+          - containerPort: 27017
+        env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: mongodb-secret
+                key: mongo-root-username
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mongodb-secret
+                key: mongo-root-password
+        volumeMounts:
             - name: storage
               mountPath: /data/db
       volumes:
         - name: storage
           persistentVolumeClaim:
-            claimName: mongo-pvc
-            
-      env:
-        - name: MONGO_INITDB_ROOT_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: mongodb-secret
-              key: mongo-root-username
-        - name: MONGO_INITDB_ROOT_PASSWORD
-          valueFrom: 
-            secretKeyRef:
-              name: mongodb-secret
-              key: mongo-root-password
-        - name: MONGO_INITDB_DATABASE
-          valueFrom: 
-            secretKeyRef:
-              name: mongodb-secret
-              key: mongo-database     
+            claimName: mongo-pcvol        
