--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pcvol
-  namespace: app3300
+  namespace: nodeapplication
 spec:
   accessModes:
     - ReadWriteOnce
